<resources>
    <string name="app_name">OverseerApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="latitude">Latitude:</string>
    <string name="placeholder">placeholder</string>
    <string name="longitude">Longitude:</string>
    <string name="send_location">Send location</string>
    <string name="location_history">Location history:</string>
    <string name="date">Date:</string>
    <string name="i_could_not_find_an_account">I could not find an account stored locally, please log in or create a new account.</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="unique_code">Unique code:</string>
    <string name="get_unique_code">Get unique code</string>
    <string name="don_t_have_an_account_register_instead">Don\'t have an account?\nRegister instead</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_identifier">%1$s#%2$d</string>
    <string name="add_new_user_to_tracking_list">Add new user to tracking list</string>
    <string name="tracking_list_already_full">Your tracked users list is already full</string>
    <string name="please_enter_the_tracking_code">Please enter the tracking code for the user that you want to track below. If you don\'t have one, you must ask that user to provide you one from their tracking app.</string>
    <string name="add_tracked_user">Add tracked user</string>
    <string name="cancel">Cancel</string>
    <string name="track_new_user">Track a new user</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_you_want_to_stop_tracking_this_user">Are you sure you want to stop tracking this user?</string>
    <string name="No_keep_following_them">No, keep following them</string>
    <string name="yes">Yes</string>
    <string name="too_many_tracked_users_to_list">There are too many tracked users that need to be listed, something went wrong.</string>
    <string name="tracked_users_list_already_full">Tracked users list is already full</string>
    <string name="io_error_communicating_with_server">In/Out error communicating with server</string>
    <string name="location_update_interval">Location update interval:</string>
    <string name="save">Save</string>
    <string name="editing_settings_for_user">Editing settings for user:</string>
    <string name="value_expressed_in_seconds">Value expressed in seconds</string>
    <string name="please_note_that_anything_lower_than_5_minutes">Please note that anything lower than 5 minutes might put unnecessary strain on this device as well as the device of the user that is being tracked. Make sure that a very low update interval is necessary before setting it as such. Prefer using values above 30 minutes if you can.\nPlease note that Google location services currently do not provide location updates faster than once every second.</string>
    <string name="interval_was_invalid">The interval was invalid. Please make sure you entered a whole number between 0 and %1$d.</string>
    <string name="successful_settings_update">Successful settings update.</string>
    <string name="user_map_activity">UserMapActivity</string>
    <string name="title_activity_users_map">UsersMapActivity</string>
    <string name="geoarea_editing_mode">Geofence operation mode</string>
    <string name="operation_mode">Operation mode</string>
    <string name="move_map">Move map</string>
    <string name="remove_geofence">Remove geofence</string>
    <string name="add_geofence">Add geofence</string>
    <string name="inside">inside</string>
    <string name="outside">outside</string>
    <string name="alerting_when">Alerting when</string>
    <string name="color">Color</string>
    <string name="geo_area_color">Geo area color</string>
    <string name="pick_a_new_color_for_the_geo_area">Pick a new color for the geo area</string>
    <string name="help">Help</string>
    <string name="geofence_controls_help">Geofence controls help</string>
    <string name="bottom_geo_controls_help">This bottom part of the controls interface allows you to select a mode of interacting with the geofences.\n• Add geofence - when you tap anywhere on the map, a geofence will pe added.\nAdjust the newly added geofence\'s size by holding down a finger on a place that you want the geofence to reach to.\n• Remove geofence - when you tap on an existing geofence, it will be removed from the map.\n• Move map - the default way to interact with the map.\nYou can pan around, zoom and focus on the target marker by clicking on it.</string>
    <string name="mode_switch_help">This part of the controls interface is used to set the alert mode of the geo area.\n• When set to \"inside\", you will receive a notification when the user is inside of the area.\n• When set to \"outside\", you will receive a notification when the user is outside of the area.</string>
    <string name="color_help">This part of the controls interface is used to set the color of the geo area.\nThe square indicates the current color. Tap it to change the color.</string>
    <string name="save_help">This button will save your current geo area.\nIf it succeeds and the new geo area is saved on the server, you will get a confirmation.\nIf not, you will get an error message instead.</string>
    <string name="clear_geofences">Clear geofences</string>
    <string name="clear_help">This button will ask for confirmation before clearing all of the geofences that you have set.\nIt doesn\'t SAVE anything right away, so even if you do delete all the geofences by confirming, you will be able to get them back by simply pressing the back button or quitting the app.\nIf you don\'t save, the next time you see this map, the geofences should be back.</string>
    <string name="exit">Exit</string>
    <string name="delete_geofences_confirmation">Are you sure you want to delete all geofences?</string>
    <string name="delete_them">Delete them</string>
    <string name="keep_them">Keep them</string>
    <string name="message_to_display_in_notification">Message to display in notification when the geofence is triggered:</string>
</resources>