<?xml version="1.0" encoding="utf-8"?>

<!-- The ID's in this file should always start with
"geoh" to denote the activity -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence_controls_help"
        android:textSize="35sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/geohExitB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:checkedButton="@id/geohMoveRB">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_geofence" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_geofence" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/geohMoveRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_map"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_geo_controls_help" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/geohAlertModeLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alerting_when"
        android:layout_marginRight="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/geohAlertModeS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        app:layout_constraintLeft_toRightOf="@id/geohAlertModeLabelTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:checked="true"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/geohAlertModeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inside"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toRightOf="@id/geohAlertModeS"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode_switch_help" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:id="@+id/geohColorV"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/background_highlight"
            android:layout_marginRight="5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/geohColorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geo_area_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/geohColorV"
            android:layout_marginLeft="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_help" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mapClearB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/clear_geofences"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_help" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mapSaveB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/save"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_help" />

</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>