<?xml version="1.0" encoding="utf-8"?>

<!-- The ID's in this file should always start with
"map" to denote the activity -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.UsersMapActivity" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:background="#55000000"
        android:padding="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mapAlertModeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:layout_marginRight="5dp"
                map:layout_constraintLeft_toLeftOf="parent"
                map:layout_constraintTop_toTopOf="parent"
                map:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/mapAlertModeS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                map:layout_constraintLeft_toRightOf="@id/mapAlertModeTV"
                map:layout_constraintTop_toTopOf="parent"
                map:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mapSaveB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/save"
                map:layout_constraintRight_toRightOf="parent"
                map:layout_constraintTop_toTopOf="parent"
                map:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_mode" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:checkedButton="@id/mapMoveRB">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/mapAddRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_geofence" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/mapRemoveRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_geofence" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/mapMoveRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move_map" />

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>